@@ -22,6 +22,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.opensearch.ResourceAlreadyExistsException;
+import org.opensearch.action.ActionRequest;
 import org.opensearch.action.admin.indices.create.CreateIndexResponse;
 import org.opensearch.action.index.IndexRequest;
 import org.opensearch.cluster.health.ClusterHealthStatus;
@@ -32,6 +33,7 @@ import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.common.settings.*;
 import org.opensearch.common.unit.TimeValue;
 import org.opensearch.common.xcontent.XContentFactory;
+import org.opensearch.core.action.ActionResponse;
 import org.opensearch.core.common.io.stream.NamedWriteableRegistry;
 import org.opensearch.core.xcontent.NamedXContentRegistry;
 import org.opensearch.env.Environment;
@@ -41,6 +43,7 @@ import org.opensearch.jobscheduler.spi.JobSchedulerExtension;
 import org.opensearch.jobscheduler.spi.ScheduledJobParser;
 import org.opensearch.jobscheduler.spi.ScheduledJobRunner;
 import org.opensearch.jobscheduler.spi.schedule.IntervalSchedule;
+import org.opensearch.plugins.ActionPlugin;
 import org.opensearch.plugins.ClusterPlugin;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.plugins.SystemIndexPlugin;
@@ -65,11 +68,14 @@ import java.util.List;
 import java.util.function.IntConsumer;
 import java.util.function.Supplier;
 
+import com.wazuh.contentmanager.action.IndexSubscriptionAction;
+import com.wazuh.contentmanager.action.TriggerUpdateAction;
 import com.wazuh.contentmanager.cti.catalog.index.ConsumersIndex;
 import com.wazuh.contentmanager.cti.catalog.index.CredentialsIndex;
 import com.wazuh.contentmanager.cti.catalog.service.LogtestService;
 import com.wazuh.contentmanager.cti.catalog.service.SecurityAnalyticsService;
 import com.wazuh.contentmanager.cti.catalog.service.SecurityAnalyticsServiceImpl;
+import com.wazuh.contentmanager.cti.catalog.service.SnapshotServiceImpl;
 import com.wazuh.contentmanager.cti.catalog.service.SpaceService;
 import com.wazuh.contentmanager.cti.catalog.service.SubscriptionService;
 import com.wazuh.contentmanager.cti.catalog.service.SubscriptionServiceImpl;
@@ -83,6 +89,8 @@ import com.wazuh.contentmanager.jobscheduler.jobs.CatalogSyncJob;
 import com.wazuh.contentmanager.jobscheduler.jobs.TelemetryPingJob;
 import com.wazuh.contentmanager.rest.service.*;
 import com.wazuh.contentmanager.settings.PluginSettings;
+import com.wazuh.contentmanager.transport.TransportIndexSubscriptionAction;
+import com.wazuh.contentmanager.transport.TransportTriggerUpdateAction;
 import com.wazuh.contentmanager.utils.ClusterInfo;
 import com.wazuh.contentmanager.utils.Constants;
 import com.wazuh.contentmanager.utils.MockEngineService;
@@ -90,7 +98,7 @@ import com.wazuh.contentmanager.utils.MockSecurityAnalyticsService;
 
 /** Main class of the Content Manager Plugin */
 public class ContentManagerPlugin extends Plugin
-        implements ClusterPlugin, JobSchedulerExtension, SystemIndexPlugin {
+        implements ActionPlugin, ClusterPlugin, JobSchedulerExtension, SystemIndexPlugin {
     private static final Logger log = LogManager.getLogger(ContentManagerPlugin.class);
     private static final String CONTENT_MANAGER_JOBS_INDEX_NAME = ".wazuh-content-manager-jobs";
     private static final String CATALOG_SYNC_JOB_ID = "wazuh-catalog-sync-job";
@@ -163,14 +171,7 @@ public class ContentManagerPlugin extends Plugin
                     nodeSettings.getAsList(
                             "plugins.security.system_indices.indices", Collections.emptyList());
             if (!systemIndicesEnabled || !systemIndices.contains(CredentialsIndex.INDEX_NAME)) {
-                log.warn(
-                        "[{}] index is not configured as a system index. "
-                                + "Registration will be disabled and any stored token will be "
-                                + "removed on startup. Add it to "
-                                + "plugins.security.system_indices.indices in opensearch.yml and "
-                                + "ensure plugins.security.system_indices.enabled is true, "
-                                + "then restart.",
-                        CredentialsIndex.INDEX_NAME);
+                log.warn(Constants.W_LOG_CREDENTIALS_INDEX_NOT_PROTECTED, CredentialsIndex.INDEX_NAME);
                 this.isCredentialsIndexProtected = false;
             }
         }
@@ -222,7 +223,7 @@ public class ContentManagerPlugin extends Plugin
                 .addSettingsUpdateConsumer(
                         PluginSettings.TELEMETRY_ENABLED, this::onTelemetrySettingChanged);
 
-        return Collections.emptyList();
+        return List.of(this.subscriptionService, this.catalogSyncJob);
     }
 
     /**
@@ -240,9 +241,33 @@ public class ContentManagerPlugin extends Plugin
             this.start(
                     () -> {
                         if (PluginSettings.getInstance().isUpdateOnStart()) {
+
+                            // Pre-deployment
+                            // -------------
+                            // 1. Register key from environment variable
+                            String accessToken = ContentManagerPlugin.preDeploymentKey();
+                            if (!accessToken.isBlank()) {
+                                try {
+                                    log.info("Pre-registered environment detected.");
+                                    this.subscriptionService.register(accessToken);
+                                } catch (Exception e) {
+                                    log.error("Unexpected error pre-registering environment: {}", e.getMessage());
+                                }
+
+                                // 2. Delete local snapshots (only for pre-registered environments).
+                                Path pluginsDir = this.environment.pluginsDir();
+                                if (pluginsDir != null) {
+                                    SnapshotServiceImpl.deleteSnapshots(
+                                            pluginsDir
+                                                    .resolve(Constants.PLUGIN_DIR_NAME)
+                                                    .resolve(Constants.CTI_SNAPSHOTS_DIR));
+                                }
+                            }
+
+                            // 3. Initialize
                             this.catalogSyncJob.trigger();
                         } else {
-                            log.info("Skipping catalog sync job trigger");
+                            log.debug(Constants.D_LOG_SKIP_CATALOG_SYNC_TRIGGER);
                         }
                         this.scheduleCatalogSyncJob();
                         this.scheduleTelemetryPingJob();
@@ -289,10 +314,10 @@ public class ContentManagerPlugin extends Plugin
             Supplier<DiscoveryNodes> nodesInCluster) {
         return List.of(
                 // CTI subscription endpoints
-                new RestPostSubscriptionAction(this.subscriptionService),
+                new RestPostSubscriptionAction(),
                 new RestGetSubscriptionAction(this.subscriptionService),
                 new RestDeleteSubscriptionAction(this.subscriptionService),
-                new RestPostUpdateAction(this.catalogSyncJob),
+                new RestPostUpdateAction(),
                 // Version check endpoint
                 new RestGetVersionCheckAction(this.environment, this.clusterService),
                 // User-generated content endpoints
@@ -345,13 +370,13 @@ public class ContentManagerPlugin extends Plugin
                                         CreateIndexResponse consumersResponse = this.consumersIndex.createIndex();
                                         if (consumersResponse != null && consumersResponse.isAcknowledged()) {
                                             log.info(
-                                                    "Index created: {} acknowledged={}",
+                                                    Constants.I_LOG_PLUGIN_INDEX_CREATED,
                                                     consumersResponse.index(),
                                                     consumersResponse.isAcknowledged());
                                         }
                                     } catch (Exception e) {
                                         log.error(
-                                                "Failed to create {} index, due to: {}",
+                                                Constants.E_LOG_PLUGIN_INDEX_CREATE_FAILED,
                                                 ConsumersIndex.INDEX_NAME,
                                                 e.getMessage(),
                                                 e);
@@ -361,13 +386,13 @@ public class ContentManagerPlugin extends Plugin
                                         CreateIndexResponse credentialsResponse = this.credentialsIndex.createIndex();
                                         if (credentialsResponse != null && credentialsResponse.isAcknowledged()) {
                                             log.info(
-                                                    "Index created: {} acknowledged={}",
+                                                    Constants.I_LOG_PLUGIN_INDEX_CREATED,
                                                     credentialsResponse.index(),
                                                     credentialsResponse.isAcknowledged());
                                         }
                                     } catch (Exception e) {
                                         log.error(
-                                                "Failed to create {} index, due to: {}",
+                                                Constants.E_LOG_PLUGIN_INDEX_CREATE_FAILED,
                                                 CredentialsIndex.INDEX_NAME,
                                                 e.getMessage(),
                                                 e);
@@ -379,7 +404,7 @@ public class ContentManagerPlugin extends Plugin
                                 }
                             });
         } catch (Exception e) {
-            log.error("Error during plugin initialization: {}", e.getMessage(), e);
+            log.error(Constants.E_LOG_PLUGIN_INIT_FAILED, e.getMessage(), e);
             onComplete.run();
         }
     }
@@ -399,9 +424,7 @@ public class ContentManagerPlugin extends Plugin
                 // unprotected access and ensure the environment falls back to unregistered mode.
                 if (this.credentialsIndex.exists()) {
                     this.credentialsIndex.deleteDocument();
-                    log.warn(
-                            "Deleted stored access token because the credentials index is not "
-                                    + "configured as a system index.");
+                    log.warn(Constants.W_LOG_ACCESS_TOKEN_DELETED_UNPROTECTED);
                 }
                 PluginSettings.getInstance().setAccessToken(null);
                 return;
@@ -410,15 +433,15 @@ public class ContentManagerPlugin extends Plugin
                 String token = this.credentialsIndex.getAccessToken();
                 if (token != null) {
                     PluginSettings.getInstance().setAccessToken(token);
-                    log.info("CTI access token loaded from credentials index.");
+                    log.info(Constants.I_LOG_CTI_TOKEN_LOADED);
                 } else {
-                    log.debug("Credentials index exists but no access token is stored.");
+                    log.debug(Constants.D_LOG_CREDENTIALS_INDEX_NO_TOKEN);
                 }
             } else {
-                log.debug("Credentials index does not exist yet; access token not loaded.");
+                log.debug(Constants.D_LOG_CREDENTIALS_INDEX_MISSING);
             }
         } catch (Exception e) {
-            log.warn("Could not load CTI access token from credentials index: {}", e.getMessage());
+            log.warn(Constants.W_LOG_CTI_TOKEN_LOAD_FAILED, e.getMessage());
         }
     }
 
@@ -436,11 +459,12 @@ public class ContentManagerPlugin extends Plugin
                         .setSettings(settings)
                         .get();
 
-                log.info("Created job index {}.", CONTENT_MANAGER_JOBS_INDEX_NAME);
+                log.info(Constants.I_LOG_JOB_INDEX_CREATED, CONTENT_MANAGER_JOBS_INDEX_NAME);
             } catch (ResourceAlreadyExistsException e) {
-                log.debug("Index {} already exists. Skipping.", CONTENT_MANAGER_JOBS_INDEX_NAME);
+                log.debug(Constants.D_LOG_INDEX_ALREADY_EXISTS, CONTENT_MANAGER_JOBS_INDEX_NAME);
             } catch (Exception e) {
-                log.warn("Could not create index {}: {}", CONTENT_MANAGER_JOBS_INDEX_NAME, e.getMessage());
+                log.warn(
+                        Constants.W_LOG_INDEX_CREATE_FAILED, CONTENT_MANAGER_JOBS_INDEX_NAME, e.getMessage());
             }
         }
 
@@ -503,10 +527,10 @@ public class ContentManagerPlugin extends Plugin
                                                     .id(CATALOG_SYNC_JOB_ID)
                                                     .source(job.toXContent(XContentFactory.jsonBuilder(), null));
                                     this.client.index(request).actionGet();
-                                    log.info("Catalog Sync Job scheduled successfully.");
+                                    log.info(Constants.I_LOG_CATALOG_SYNC_JOB_SCHEDULED);
                                 }
                             } catch (Exception e) {
-                                log.info("Failed to schedule Catalog Sync Job: {}, retrying", e.getMessage());
+                                log.warn(Constants.W_LOG_CATALOG_SYNC_JOB_FAILED, e.getMessage());
                                 this.retryJobScheduling("Catalog Sync Job", attempt, this::scheduleCatalogSyncJob);
                             }
                         });
@@ -523,15 +547,12 @@ public class ContentManagerPlugin extends Plugin
     private void retryJobScheduling(String jobName, int attempt, IntConsumer retryAction) {
         int nextAttempt = attempt + 1;
         if (nextAttempt > Constants.MAX_JOB_SCHEDULE_RETRIES) {
-            log.error(
-                    "Giving up scheduling {} after {} attempts.",
-                    jobName,
-                    Constants.MAX_JOB_SCHEDULE_RETRIES);
+            log.error(Constants.E_LOG_JOB_SCHEDULE_GIVE_UP, jobName, Constants.MAX_JOB_SCHEDULE_RETRIES);
             return;
         }
         long delaySeconds = (long) nextAttempt * Constants.JOB_SCHEDULE_RETRY_BACKOFF_SECONDS;
         log.info(
-                "Retrying {} (attempt {}/{}) in {}s.",
+                Constants.I_LOG_JOB_SCHEDULE_RETRY,
                 jobName,
                 nextAttempt,
                 Constants.MAX_JOB_SCHEDULE_RETRIES,
@@ -558,7 +579,7 @@ public class ContentManagerPlugin extends Plugin
     private void scheduleTelemetryPingJob(int attempt) {
         boolean isEnabled = PluginSettings.getInstance().isTelemetryEnabled();
         if (!isEnabled) {
-            log.info("Telemetry job is disabled via settings. Skipping registration.");
+            log.debug(Constants.D_LOG_TELEMETRY_JOB_DISABLED);
             return;
         }
 
@@ -604,7 +625,7 @@ public class ContentManagerPlugin extends Plugin
                                                     .source(job.toXContent(XContentFactory.jsonBuilder(), null));
 
                                     this.client.index(request).actionGet();
-                                    log.info("Telemetry Ping Job scheduled successfully (Interval: 1d).");
+                                    log.info(Constants.I_LOG_TELEMETRY_JOB_SCHEDULED);
 
                                     // Run the first ping immediately; subsequent fires are owned by
                                     // the Job Scheduler on the 1-day interval.
@@ -613,7 +634,7 @@ public class ContentManagerPlugin extends Plugin
                                     }
                                 }
                             } catch (Exception e) {
-                                log.info("Failed to schedule Telemetry Ping Job: {}", e.getMessage());
+                                log.warn(Constants.W_LOG_TELEMETRY_JOB_FAILED, e.getMessage());
                                 this.retryJobScheduling(
                                         "Telemetry Ping Job", attempt, this::scheduleTelemetryPingJob);
                             }
@@ -624,11 +645,10 @@ public class ContentManagerPlugin extends Plugin
     private void onTelemetrySettingChanged(boolean isEnabled) {
         PluginSettings.getInstance().setTelemetryEnabled(isEnabled);
         if (isEnabled) {
-            log.info(
-                    "Telemetry setting dynamically enabled. Scheduling job and triggering initial run...");
+            log.info(Constants.I_LOG_TELEMETRY_DYNAMICALLY_ENABLED);
             this.scheduleTelemetryPingJob();
         } else {
-            log.info("Telemetry setting dynamically disabled. Removing job...");
+            log.info(Constants.I_LOG_TELEMETRY_DYNAMICALLY_DISABLED);
             this.removeTelemetryPingJob();
         }
     }
@@ -658,11 +678,11 @@ public class ContentManagerPlugin extends Plugin
                                         this.client
                                                 .prepareDelete(CONTENT_MANAGER_JOBS_INDEX_NAME, TELEMETRY_JOB_ID)
                                                 .get();
-                                        log.info("Telemetry Ping Job removed successfully.");
+                                        log.info(Constants.I_LOG_TELEMETRY_JOB_REMOVED);
                                     }
                                 }
                             } catch (Exception e) {
-                                log.error("Failed to remove Telemetry Ping Job: {}", e.getMessage());
+                                log.error(Constants.E_LOG_TELEMETRY_JOB_REMOVE_FAILED, e.getMessage());
                             }
                         });
     }
@@ -680,6 +700,7 @@ public class ContentManagerPlugin extends Plugin
                 PluginSettings.CTI_API_URL,
                 PluginSettings.MAX_CONCURRENT_BULKS,
                 PluginSettings.MAX_ITEMS_PER_BULK,
+                PluginSettings.MAX_BULK_BYTES,
                 PluginSettings.CATALOG_SYNC_INTERVAL,
                 PluginSettings.UPDATE_ON_START,
                 PluginSettings.UPDATE_ON_SCHEDULE,
@@ -690,6 +711,15 @@ public class ContentManagerPlugin extends Plugin
                 PluginSettings.PIT_KEEPALIVE,
                 PluginSettings.ENGINE_MOCK_ENABLED,
                 PluginSettings.CREATE_DETECTORS);
+    }
+
+    @Override
+    public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
+        return List.of(
+                new ActionPlugin.ActionHandler<>(
+                        IndexSubscriptionAction.INSTANCE, TransportIndexSubscriptionAction.class),
+                new ActionPlugin.ActionHandler<>(
+                        TriggerUpdateAction.INSTANCE, TransportTriggerUpdateAction.class));
     }
 
     /**
@@ -769,9 +799,9 @@ public class ContentManagerPlugin extends Plugin
                 return fileVersion;
             }
 
-            log.warn("VERSION.json found but 'version' field is empty or missing.");
+            log.warn(Constants.W_LOG_VERSION_FIELD_MISSING);
         } catch (Exception e) {
-            log.warn("Could not read VERSION.json: {}", e.getMessage());
+            log.warn(Constants.W_LOG_VERSION_READ_FAILED, e.getMessage());
         }
 
         String configuredVersion = System.getProperty(VERSION_SYSTEM_PROPERTY);
@@ -791,5 +821,15 @@ public class ContentManagerPlugin extends Plugin
      */
     public static boolean isTestEnvironment() {
         return "true".equals(System.getProperty("INDEXER_TEST_ENV"));
+    }
+
+    /**
+     * Returns the value of the "DEPLOY_KEY" environment variable, if it exists.
+     *
+     * @return value of the "DEPLOY_KEY" environment variable, of an empty string if it does not
+     *     exist.
+     */
+    public static String preDeploymentKey() {
+        return System.getProperty("DEPLOY_KEY", "");
     }
 }
